--- a/microsphere-cdi/pom.xml
+++ b/microsphere-cdi/pom.xml
@@ -58,6 +58,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.cdi.tck</groupId>
+            <artifactId>cdi-tck-impl</artifactId>
+            <version>2.0.5.SP1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
