Add slfj4 API dependencies

--- a/microsphere-cdi/pom.xml
+++ b/microsphere-cdi/pom.xml
@@ -51,6 +51,13 @@
             <version>${revision}</version>
         </dependency>
 
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
