Update names of pom.xml

--- a/microsphere-cache/pom.xml
+++ b/microsphere-cache/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>microsphere-cache</artifactId>
     <packaging>jar</packaging>
 
-    <name>Microsphere Projects :: Java EE Cache</name>
+    <name>Microsphere Projects :: Java EE :: Cache</name>
     <description>Microsphere Java EE Cache Project</description>
 
     <dependencies>
