--- a/microsphere-java-enterprise-parent/pom.xml
+++ b/microsphere-java-enterprise-parent/pom.xml
@@ -15,7 +15,7 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
-    <name>Microsphere Projects :: Java EE :: Parent</name>
+    <name>Microsphere :: Java EE :: Parent</name>
     <description>Microsphere Java EE Parent Project</description>
 
     <properties>
