--- a/microsphere-jcache/pom.xml
+++ b/microsphere-jcache/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>microsphere-jcache</artifactId>
     <packaging>jar</packaging>
 
-    <name>Microsphere Projects :: Java EE :: Cache</name>
+    <name>Microsphere :: Java EE :: Cache</name>
     <description>Microsphere Java EE Cache Project</description>
 
     <dependencies>
