增加 Java XML 依赖，支持 JDK 11+，详情见 JEP 320

--- a/microsphere-cdi/pom.xml
+++ b/microsphere-cdi/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>cdi-api</artifactId>
         </dependency>
 
+        <!-- Java XML -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
         <!-- Microsphere Core -->
         <dependency>
             <groupId>io.github.microsphere-projects</groupId>
