--- a/microsphere-java-enterprise-parent/pom.xml
+++ b/microsphere-java-enterprise-parent/pom.xml
@@ -28,6 +28,7 @@
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <jstl.version>1.2</jstl.version>
         <javax.mail.version>1.4.7</javax.mail.version>
+        <javax.xml.version>2.3.1</javax.xml.version>
 
         <!-- Internal Projects -->
         <microsphere.version>${revision}</microsphere.version>
@@ -133,6 +134,13 @@
                 <groupId>javax.mail</groupId>
                 <artifactId>mail</artifactId>
                 <version>${javax.mail.version}</version>
+            </dependency>
+
+            <!-- Java XML -->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${javax.xml.version}</version>
             </dependency>
 
             <!-- Third Parties Dependencies -->
