fix: Microsphere Java enterprise parent missing (Lettuce core, Jedis) dependency

--- a/microsphere-java-enterprise-parent/pom.xml
+++ b/microsphere-java-enterprise-parent/pom.xml
@@ -167,6 +167,20 @@
                 </exclusions>
             </dependency>
 
+            <!-- lettuce -->
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce.version}</version>
+            </dependency>
+
+            <!-- jedis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+
             <!-- Testing Dependencies -->
             <!-- JUnit -->
             <dependency>
