--- a/microsphere-interceptor/pom.xml
+++ b/microsphere-interceptor/pom.xml
@@ -51,10 +51,23 @@
             <artifactId>cglib</artifactId>
         </dependency>
 
+        <!-- Third-Party Dependencies -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
 
