--- a/microsphere-servlet/pom.xml
+++ b/microsphere-servlet/pom.xml
@@ -22,7 +22,7 @@
         <!-- Microsphere Core -->
         <dependency>
             <groupId>io.github.microsphere-projects</groupId>
-            <artifactId>microsphere-core</artifactId>
+            <artifactId>microsphere-java-core</artifactId>
         </dependency>
 
         <!-- Java Common Annotations -->
