--- a/microsphere-cdi/pom.xml
+++ b/microsphere-cdi/pom.xml
@@ -47,7 +47,7 @@
         <!-- Microsphere Core -->
         <dependency>
             <groupId>io.github.microsphere-projects</groupId>
-            <artifactId>microsphere-core</artifactId>
+            <artifactId>microsphere-java-core</artifactId>
         </dependency>
 
         <!-- Microsphere Interceptor -->
