--- a/microsphere-interceptor/pom.xml
+++ b/microsphere-interceptor/pom.xml
@@ -42,7 +42,7 @@
         <!-- Microsphere Core -->
         <dependency>
             <groupId>io.github.microsphere-projects</groupId>
-            <artifactId>microsphere-core</artifactId>
+            <artifactId>microsphere-java-core</artifactId>
         </dependency>
 
         <!-- CGLIB -->
