--- a/microsphere-jcache/pom.xml
+++ b/microsphere-jcache/pom.xml
@@ -35,7 +35,7 @@
         <!-- Microsphere Core -->
         <dependency>
             <groupId>io.github.microsphere-projects</groupId>
-            <artifactId>microsphere-core</artifactId>
+            <artifactId>microsphere-java-core</artifactId>
         </dependency>
 
         <!-- Microsphere Interceptor -->
