--- a/microsphere-java-enterprise-parent/pom.xml
+++ b/microsphere-java-enterprise-parent/pom.xml
@@ -30,8 +30,8 @@
         <javax.mail.version>1.4.7</javax.mail.version>
         <javax.xml.version>2.3.1</javax.xml.version>
 
-        <!-- Internal -->
-        <microsphere-java.version>0.0.4</microsphere-java.version>
+        <!-- Microsphere -->
+        <microsphere-java.version>0.0.5</microsphere-java.version>
 
         <!-- Third Parties -->
         <spring-framework.version>5.3.27</spring-framework.version>
